# AutoWIFI

./: .gitignore  README.md  autowifi.sh  index.html  pyproject.toml
autowifi/: __init__.py  __main__.py  attacks.py  cli.py  config.py  cracker.py  deps.py  handshake.py  interface.py  mcp_server.py  report.py  scanner.py  session.py  ui.py
