[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autowifi"
version = "2.0.0"
description = "Wireless penetration testing and security audit framework"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
authors = [{name = "momenbasel"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
autowifi = "autowifi.cli:main"

[project.urls]
Homepage = "https://github.com/momenbasel/AutoWIFI"
Repository = "https://github.com/momenbasel/AutoWIFI"
Issues = "https://github.com/momenbasel/AutoWIFI/issues"

[tool.setuptools.packages.find]
include = ["autowifi*"]
