[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autowifi"
version = "2.0.0"
description = "Wireless penetration testing and security audit framework"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "momenbasel"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
autowifi = "autowifi.cli:main"
autowifi-mcp = "autowifi.mcp_server:main"

[project.urls]
Homepage = "https://github.com/momenbasel/AutoWIFI"
Repository = "https://github.com/momenbasel/AutoWIFI"
Issues = "https://github.com/momenbasel/AutoWIFI/issues"

[tool.setuptools.packages.find]
include = ["autowifi*"]
